--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 blinker==1.9.0
 click==8.1.8
-Flask==3.1.0
+Flask==3.0.2
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-SQLAlchemy==2.0.40
+SQLAlchemy==2.0.27
 typing_extensions==4.13.0
 Werkzeug==3.1.3
 WTForms==3.2.1
+gunicorn==21.2.0
+requests==2.31.0
+psycopg2-binary==2.9.9
